styled and added footer

--- a/index.html
+++ b/index.html
@@ -14,14 +14,54 @@
     />
   </head>
   <body>
-    <div class="container text-center">
-      <img src="./assets/Cake.svg" alt="Gift" />
-      <h1>
-        Happy Birthday
-        <span class="txt-type"></span>
-      </h1>
-      <div class="h2 text-danger">May God Bless You!</div>
+    <div class="con">
+      <div class="container text-center">
+        <img src="./assets/Cake.svg" alt="Gift" />
+        <h1>
+          Happy Birthday
+          <span class="txt-type"></span>
+        </h1>
+        <div class="h2 text-danger">May God Bless You!</div>
+      </div>
     </div>
+    <!-- Footer -->
+    <footer class="page-footer">
+<div class="container">
+  <div class="foot-icon">
+    <img src="./assets/Icons/HTML.svg" alt="">
+  </div>
+  <div class="foot-icon">
+    <img src="./assets/Icons/CSS.svg" alt="">
+  </div>
+  <div class="foot-icon">
+    <img src="./assets/Icons/JS.svg" alt="">
+  </div>
+  <div class="foot-icon">
+    <img src="./assets/Icons/Bootstrap.svg" alt="">
+  </div>
+  <div class="foot-icon">
+    <img src="./assets/Icons/Figma.svg" alt="">
+  </div>
+  <div class="foot-icon">
+    <img src="./assets/Icons/Illustrator.svg" alt="">
+  </div>
+  <div class="foot-icon">
+    <img src="./assets/Icons/vscode.svg" alt="">
+  </div>
+  <div class="foot-icon">
+    <img src="./assets/Icons/GitHub.svg" alt="">
+  </div>
+</div>
+
+      <!-- Copyright -->
+      <div class="text-center">&copy 2021 Copyright:
+        <a href="https://github.com/kushagra-aa/" target="_blank"> Kushagra Agnihotri</a>
+      </div>
+      <!-- Copyright -->
+    
+    </footer>
+    <!-- Footer -->
+    </html>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
