--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="container text-center">
         <img src="./assets/Cake.svg" alt="Gift" />
         <h1>
-          Happy Birthday
+          <!-- Happy Birthday -->
           <span class="txt-type"></span>
         </h1>
-        <div class="h2 text-danger">May God Bless You!</div>
+        <!-- <div class="h2 text-danger">May God Bless You!</div> -->
       </div>
     </div>
     <!-- Footer -->
